--- a/templates/redis.conf.j2
+++ b/templates/redis.conf.j2
@@ -24,9 +24,13 @@ syslog-facility {{ redis_syslog_facility }}
 databases {{ redis_databases }}
 
 # Snapshotting
+{% if redis_save == "" -%}
+save ""
+{% else -%}
 {% for save in redis_save -%}
 save {{ save }}
 {% endfor -%}
+{% endif -%}
 stop-writes-on-bgsave-error {{ redis_stop_writes_on_bgsave_error|string }}
 rdbcompression {{ redis_rdbcompression|string }}
 rdbchecksum {{ redis_rdbchecksum|string }}
